rhdlc/test/compile-fail/scope/use-mod-self-struct/top.rhdl
mod a {
    struct b {}
}

use a::self::b;
